[package]
name = "image-undump"
description = "Analyze a folder containing a large quantity of images"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
license = "MIT OR Apache-2.0"

version = "0.0.0"
edition = "2018"

[dependencies]
futures = "0.3.5"
image = "0.23.4"
glob = "0.3"

[dependencies.tokio]
version = "0.2"
features = ["blocking", "fs", "io-util", "rt-util", "stream"]
